home to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div id="sidebar">
                 <div id="sidebar-name">John Echols</div>
                 <ul class="sidebar-list">About
-                    <li><a class="sidebar-link" href="home.html">Home</a>
+                    <li><a class="sidebar-link" href="index.html">Home</a>
                     <li><a class="sidebar-link" href="projects.html">Projects</a>
                     <li><a class="sidebar-link" href="band.html">Cal Band</a>
                 </ul>
