--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="content">
             <div id="pic-of-me">
-                <img src="resources/images/me.jpg">
+                <img src="resources/images/me2.jpg">
             </div>
             <div id="info">
                 <div id="name">John Thomas Echols</div>
