--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>About | John Echols </title>
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="resources/css/stylesheet.css"/>
         <link rel="stylesheet" type="text/css" href="resources/css/home.css"/>
         <script src="resources/js/jquery-1.9.1.js"></script>
