--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Projects | John Echols</title>
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="resources/css/stylesheet.css"/>
         <script src="resources/js/jquery-1.9.1.js"></script>
     </head>
@@ -24,7 +25,22 @@
             </div>
         </div>
         <div class="content">
-            Page To Come Shortly
+            <div id="class-proj">
+                <div class="project">
+                    Editor
+                <div>
+                <div class="project">
+                    Bear Maps
+                </div>
+            </div>
+            <div id="my-proj">
+                <div class="project">
+                    NewFL
+                </div>
+                <div class="project">
+                    Now! Trivia
+                </div>
+            </div>
         </div>
     </body>
 </html>
