tranisiton fix for menu icon and resume update

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <li><a class="sidebar-link" href="band.html">Cal Band</a>
                 </ul>
                 <ul class="sidebar-list">Contact
-                    <li><a class="sidebar-link" href="resources/files/resume.pdf">Resume</a>
-                    <li><a class="sidebar-link" href="https://www.github.com/jtechols">Github</a>
-                    <li><a class="sidebar-link" href="mailto:jechols@berkeley.edu">E-mail Me</a>
+                    <li><a class="sidebar-link" href="resources/files/John_Echols_Resume.pdf" target="_blank">Resume</a>
+                    <li><a class="sidebar-link" href="https://www.github.com/jtechols" target="_blank">Github</a>
+                    <li><a class="sidebar-link" href="mailto:jechols@berkeley.edu" target="_blank">E-mail Me</a>
                 </ul>
                 <div id="expand">
                     <img src="resources/images/expand.svg">
