projects page first commit

--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="proj-info">This was a personal project I did in the Summer of 2016. The web-app is a trivia game based on the popular music album series Now That's What I Call Music! Players are given a song and must guess what album from the series it is from. The game is written in python using the Djano framework and is deployed through Heroku. Upcoming updates include Spotify API integration and new frontend design so stay tuned!</div> 
                     <a href="https://github.com/jtechols/now_trivia"><div class="code-link">Code</div></a>
-                    <a href="http://www.nowthatstrivia.com/"><div class="website-link">Spec</div></a> 
+                    <a href="http://www.nowthatstrivia.com/"><div class="website-link">Website</div></a> 
                 </div>
                 <div id="circ-1" class="circle"></div>
                 <div id="circ-2" class="circle"></div>
