changed newfl description

--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
                     <div class="proj-pic">
                         <img src="resources/images/newfl_screenshot.png">
                     </div>
-                    <div class="proj-info">This was a personal project I started in the Summer of 2015 after taking my first Computer Science course. The web-app is a fantasy football style game devloped for the Cal Band. The game allows players to pick Cal Band members to be a part of their "team" and then the players score points as the members of their team perform band related activites. The app is written in Python using the Django framework and is hosted on Heroku.</div>
+                    <div class="proj-info">This was a personal project I started in the Summer of 2015 after taking my first Computer Science course. The web-app is a fantasy football style game devloped for the Cal Band. The game allows players to pick Cal Band members to be a part of their "team" and then the players score points as the members of their team perform band related activites. The app is written in Python using the Django framework.</div>
                     <div class="single-links"> 
                         <a href="https://github.com/jtechols/newfl" target="_blank"><div class="project-link">Code</div></a>
                     </div>
