page coming soon for band

--- a/band.html
+++ b/band.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="content">
-            Page To Come Shortly
+            <div class="coming-soon">Page Coming Soon!</div>
         </div>
     </body>
 </html>
