hide Cal Band page

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
                 <ul class="sidebar-list">About
                     <li><a class="sidebar-link" href="index.html">Home</a>
                     <li><a class="sidebar-link" href="projects.html">Projects</a>
-                    <li><a class="sidebar-link" href="band.html">Cal Band</a>
+                    <!-- <li><a class="sidebar-link" href="band.html">Cal Band</a> -->
                 </ul>
                 <ul class="sidebar-list">Contact
                     <li><a class="sidebar-link" href="resources/files/John_Echols_Resume.pdf" target="_blank">Resume</a>
