--- a/projects.html
+++ b/projects.html
@@ -58,8 +58,8 @@
                         <img src="resources/images/bear_maps_screenshot.png">   
                     </div>
                     <div class="proj-info">This was a class project for Computer Science 61B Data Structures. We created a mapping application that allows you to find the shortest path from two places in Berkeley. The application implements the A* Search algorithm to find the shortest distance and is written in Java.</div>
-                    <div class="single-links"> 
-                        <!-- <a href=""><div class="project-link" target="_blank">Website</div></a> -->
+                    <div class="links"> 
+                        <a href="john-echols-bear-maps.heroku.com"><div class="project-link" target="_blank">Website</div></a>
                         <a href="http://datastructur.es/sp16/materials/proj/proj3/proj3.html" target="_blank"><div class="project-link">Spec</div></a>
                     </div> 
 
