--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="proj-info">This was a class project for Computer Science 61B Data Structures. We created a mapping application that allows you to find the shortest path from two places in Berkeley. The application implements the A* Search algorithm to find the shortest distance and is written in Java.</div>
                     <div class="links"> 
-                        <a href="www.john-echols-bear-maps.heroku.com"><div class="project-link" target="_blank">Website</div></a>
+                        <a href="www.john-echols-bear-maps.heroku.com" target="_blank"><div class="project-link" >Website</div></a>
                         <a href="http://datastructur.es/sp16/materials/proj/proj3/proj3.html" target="_blank"><div class="project-link">Spec</div></a>
                     </div> 
 
