added Cal Band Page

--- a/band.html
+++ b/band.html
@@ -3,6 +3,7 @@
         <title>Cal Band | John Echols</title>
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="resources/css/stylesheet.css"/>
+        <link rel="stylesheet" type="text/css" href="resources/css/band.css"/>
         <script src="resources/js/jquery-1.9.1.js"></script>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -35,7 +36,20 @@
             </div>
         </div>
         <div class="content">
-            <div class="coming-soon">Page Coming Soon!</div>
+            <div class="page-title"><h3>Cal Band</h3></div>
+            <div class="band-entry">
+                <img src="resources/images/sb50.jpg">
+                <p class="right-p">In Feburary of 2016 the Cal Band was invited to perform alongside Coldplay, Bruno Mars, and Beyonce at the Super Bowl 50 halftime show. The countless hours of rehearsal were all worth the once-in-a-lifetime oppurtinity of performing for millions of viewers. You can check out the whole show <a href="https://www.youtube.com/watch?v=c9cUytejf1k"> here</a>. I show up on camera at the <a href="https://youtu.be/c9cUytejf1k?t=2m27s">2:27</a> mark.</p>
+            </div>
+            <div class="band-entry"> 
+                <img src="resources/images/okinawa.jpg">
+                <p class="left-p">Over the Summer of 2016 the Cal Band went on a tour of Asia, stopping in China and Japan. We played at the Great Wall and an elementary school in China. In Japan we performed a joint concert with the University of Tokyo as well as playing at the Okinawa Naval Base as part of their family appreciation week. </p>
+            </div>
+            <div class="band-entry">
+                <p class="right-p">In March of 2017 I travelled to Seatlle, Las Vegas, and Waco, Texas for the Women's PAC-12 Basketball Tournament, Men's PAC-12 Basketball Tournament, and Women's NCAA Basketball Tournament. As the Student Director for the Cal Band, I had a great time organizing the trips and conducting during the basketball games.</p>
+                <img src="resources/images/waco.jpg">
+            </div> 
+            
         </div>
     </body>
 </html>
