--- a/projects.html
+++ b/projects.html
@@ -38,19 +38,16 @@
         </div>
         <div class="content">
             <div id="project-container">
-                <div id="proj-2" class="project">
-                    <div class="proj-title">Editor</div>
+                <div id="proj-1" class="project">
+                    <div class="proj-title">Pac-Man AI</div>
                     <div class="left-arrow"><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M7.701,14.276l9.586-9.585c0.879-0.878,2.317-0.878,3.195,0l0.801,0.8c0.878,0.877,0.878,2.316,0,3.194  L13.968,16l7.315,7.315c0.878,0.878,0.878,2.317,0,3.194l-0.801,0.8c-0.878,0.879-2.316,0.879-3.195,0l-9.586-9.587  C7.229,17.252,7.02,16.62,7.054,16C7.02,15.38,7.229,14.748,7.701,14.276z"/></svg></div>
                     <div class="right-arrow"><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M24.291,14.276L14.705,4.69c-0.878-0.878-2.317-0.878-3.195,0l-0.8,0.8c-0.878,0.877-0.878,2.316,0,3.194  L18.024,16l-7.315,7.315c-0.878,0.878-0.878,2.317,0,3.194l0.8,0.8c0.878,0.879,2.317,0.879,3.195,0l9.586-9.587  c0.472-0.471,0.682-1.103,0.647-1.723C24.973,15.38,24.763,14.748,24.291,14.276z"/></svg></div>
                     <div class="proj-pic">
-                        <img src="resources/images/editor_screenshot.png">
+                        <img src="resources/images/pac_man.gif">
                     </div>
-                    <div class="proj-info">This was a class project for Computer Science 61B Data Structures. We created a simple text editor in Java using the JavaFX library focusing on the sotring of text into a linked list strucuture.</div>
-                    <div class="single-links">
-                        <a href="http://datastructur.es/sp16/materials/proj/proj2/proj2.html" target="_blank"><div class="project-link">Spec</div></a>
-                    </div>
+                    <div class="proj-info">This was a class project for Computer Science 188 Artificial Intelligencce. I created the Pac-Man agent you see above in Python using a mulit-agent search algorithm. We also did a similar project using reinforcement learning. </div>
                 </div>
-                <div id="proj-1" class="project">
+                <div id="proj-2" class="project">
                     <div class="proj-title">Bear Maps</div>
                     <div class="left-arrow"><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M7.701,14.276l9.586-9.585c0.879-0.878,2.317-0.878,3.195,0l0.801,0.8c0.878,0.877,0.878,2.316,0,3.194  L13.968,16l7.315,7.315c0.878,0.878,0.878,2.317,0,3.194l-0.801,0.8c-0.878,0.879-2.316,0.879-3.195,0l-9.586-9.587  C7.229,17.252,7.02,16.62,7.054,16C7.02,15.38,7.229,14.748,7.701,14.276z"/></svg></div>
                     <div class="right-arrow"><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M24.291,14.276L14.705,4.69c-0.878-0.878-2.317-0.878-3.195,0l-0.8,0.8c-0.878,0.877-0.878,2.316,0,3.194  L18.024,16l-7.315,7.315c-0.878,0.878-0.878,2.317,0,3.194l0.8,0.8c0.878,0.879,2.317,0.879,3.195,0l9.586-9.587  c0.472-0.471,0.682-1.103,0.647-1.723C24.973,15.38,24.763,14.748,24.291,14.276z"/></svg></div>
@@ -65,35 +62,19 @@
 
                 </div>
                 <div id="proj-3" class="project">
-                    <div class="proj-title">NewFL</div>
+                    <div class="proj-title">Arcade Machine</div>
                     <div class="left-arrow"><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M7.701,14.276l9.586-9.585c0.879-0.878,2.317-0.878,3.195,0l0.801,0.8c0.878,0.877,0.878,2.316,0,3.194  L13.968,16l7.315,7.315c0.878,0.878,0.878,2.317,0,3.194l-0.801,0.8c-0.878,0.879-2.316,0.879-3.195,0l-9.586-9.587  C7.229,17.252,7.02,16.62,7.054,16C7.02,15.38,7.229,14.748,7.701,14.276z"/></svg></div>
                     <div class="right-arrow"><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M24.291,14.276L14.705,4.69c-0.878-0.878-2.317-0.878-3.195,0l-0.8,0.8c-0.878,0.877-0.878,2.316,0,3.194  L18.024,16l-7.315,7.315c-0.878,0.878-0.878,2.317,0,3.194l0.8,0.8c0.878,0.879,2.317,0.879,3.195,0l9.586-9.587  c0.472-0.471,0.682-1.103,0.647-1.723C24.973,15.38,24.763,14.748,24.291,14.276z"/></svg></div>
                     <div class="proj-pic">
                         <img src="resources/images/newfl_screenshot.png">
                     </div>
-                    <div class="proj-info">This was a personal project I started in the Summer of 2015 after taking my first Computer Science course. The web-app is a fantasy football style game devloped for the Cal Band. The game allows players to pick Cal Band members to be a part of their "team" and then the players score points as the members of their team perform band related activites. The app is written in Python using the Django framework.</div>
-                    <div class="single-links"> 
-                        <a href="https://github.com/jtechols/newfl" target="_blank"><div class="project-link">Code</div></a>
-                    </div>
-                </div>
-                <div id="proj-4" class="project">
-                    <div class="proj-title">Now Trivia!</div>
-                    <div class="left-arrow"><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M7.701,14.276l9.586-9.585c0.879-0.878,2.317-0.878,3.195,0l0.801,0.8c0.878,0.877,0.878,2.316,0,3.194  L13.968,16l7.315,7.315c0.878,0.878,0.878,2.317,0,3.194l-0.801,0.8c-0.878,0.879-2.316,0.879-3.195,0l-9.586-9.587  C7.229,17.252,7.02,16.62,7.054,16C7.02,15.38,7.229,14.748,7.701,14.276z"/></svg></div>
-                    <div class="right-arrow"><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M24.291,14.276L14.705,4.69c-0.878-0.878-2.317-0.878-3.195,0l-0.8,0.8c-0.878,0.877-0.878,2.316,0,3.194  L18.024,16l-7.315,7.315c-0.878,0.878-0.878,2.317,0,3.194l0.8,0.8c0.878,0.879,2.317,0.879,3.195,0l9.586-9.587  c0.472-0.471,0.682-1.103,0.647-1.723C24.973,15.38,24.763,14.748,24.291,14.276z"/></svg></div>
-                    <div class="proj-pic"> 
-                        <img src="resources/images/nowt_screenshot.png">
-                    </div>
-                    <div class="proj-info">This was a personal project I did in the Summer of 2016. The web-app is a trivia game based on the popular music album series Now That's What I Call Music! Players are given a song and must guess what album from the series it is from. The game is written in python using the Djano framework and is deployed through Heroku. Upcoming updates include Spotify API integration and new frontend design so stay tuned!</div> 
-                    <div class="links">
-                        <a href="https://github.com/jtechols/now_trivia" target="_blank"><div class="project-link">Code</div></a>
-                        <a href="http://www.nowthatstrivia.com/" target="_blank"><div class="project-link">Website</div></a> 
-                    </div>                
+                    <div class="proj-info">This was a personal project I did with a Mechanical Engieering friend of mine. We modeled the cabinet using AutoDesk Fusion 360 and then laser cut the wood. The inside is comprised of an old PC monitor, a raspberry pi, and a USB microcontroller whose pins connect to all the buttons. The software for the Raspberry Pi is the open source project Retropie.</div>
                 </div>
                 <div id="circle-container">
                     <div id="circ-1" class="circle"></div>
                     <div id="circ-2" class="circle"></div>
                     <div id="circ-3" class="circle"></div>
-                    <div id="circ-4" class="circle"></div>
+                    <!--<div id="circ-4" class="circle"></div>-->
                 </div>
             </div>
         </div>
