Update pictures and front page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div id="school">University of California, Berkeley class of 2018<br>
                 </div>
                 <div id="header">Welcome!</div>
-                <div id="description"><p> My name is John Echols and I am currently a Juinor at UC Berkeley where I'm majoring in Bioengineering and minoring in Electrical Engineering and Computer Sciences.</p></div> 
+                <div id="description"><p> My name is John Echols and I am currently a Senior at UC Berkeley where I'm majoring in Bioengineering and minoring in Electrical Engineering and Computer Sciences.</p></div> 
             </div>
         </div>
     </body>
