New band section

--- a/band.html
+++ b/band.html
@@ -49,6 +49,10 @@
                 <p class="right-p">In March of 2017 I travelled to Seatlle, Las Vegas, and Waco, Texas for the Women's PAC-12 Basketball Tournament, Men's PAC-12 Basketball Tournament, and Women's NCAA Basketball Tournament. As the Student Director for the Cal Band, I had a great time organizing the trips and conducting during the basketball games.</p>
                 <img src="resources/images/waco.jpg">
             </div> 
+            <div class="band-entry">
+                <p class="left-p">For the Fall of 2017 as part of my Student Director responsibilites, I conducted the band at all of the Cal Football games. Win or lose, it is always a pleasure to be in front of the band. </p>
+                <img src="resources/images/stud_fall.jpg">
+            </div> 
             
         </div>
     </body>
