Link color change

--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                     <div class="proj-pic">
                         <img src="resources/images/pac_man.gif">
                     </div>
-                    <div class="proj-info">This was a class project for Computer Science 188 Artificial Intelligencce. I created the Pac-Man agent you see above in Python using a mulit-agent search algorithm. We also did a similar project using reinforcement learning. </div>
+                    <div class="proj-info">This was a class project for Computer Science 188: Artificial Intelligence. I created the Pac-Man agent you see above in Python using a mulit-agent search algorithm. We also did a similar project using reinforcement learning. </div>
                 </div>
                 <div id="proj-2" class="project">
                     <div class="proj-title">Bear Maps</div>
@@ -54,7 +54,7 @@
                     <div class="proj-pic">
                         <img src="resources/images/bear_maps_screenshot.png">   
                     </div>
-                    <div class="proj-info">This was a class project for Computer Science 61B Data Structures. We created a mapping application that allows you to find the shortest path from two places in Berkeley. The application implements the A* Search algorithm to find the shortest distance and is written in Java.</div>
+                    <div class="proj-info">This was a class project for Computer Science 61B: Data Structures. We created a mapping application that allows you to find the shortest path from two places in Berkeley. The application is written in Java and implements the A* Search algorithm to find the shortest distance.</div>
                     <div class="links"> 
                         <a href="http://john-echols-bear-maps.herokuapp.com/map.html" target="_blank"><div class="project-link" >Website</div></a>
                         <a href="http://datastructur.es/sp16/materials/proj/proj3/proj3.html" target="_blank"><div class="project-link">Spec</div></a>
@@ -68,7 +68,7 @@
                     <div class="proj-pic">
                         <img src="resources/images/arcade_pic.jpg">
                     </div>
-                    <div class="proj-info">This was a personal project I did with a Mechanical Engieering friend of mine. We modeled the cabinet using AutoDesk Fusion 360 and then laser cut the wood. The inside is comprised of an old PC monitor, a raspberry pi, and a USB microcontroller whose pins connect to all the buttons. The software for the Raspberry Pi is the open source project Retropie.</div>
+                    <div class="proj-info">This was a personal project I did with a friend of mine. We modeled the cabinet using AutoDesk Fusion 360 and then laser cut the wood. The inside is comprised of an old PC monitor, a Raspberry Pi, and a USB microcontroller whose pins connect to all the buttons. The software for the Raspberry Pi is the open source project, Retropie.</div>
                 </div>
                 <div id="circle-container">
                     <div id="circ-1" class="circle"></div>
