Small Text fixes

--- a/band.html
+++ b/band.html
@@ -39,18 +39,18 @@
             <div class="page-title"><h3>Cal Band</h3></div>
             <div class="band-entry">
                 <img src="resources/images/sb50.jpg">
-                <p class="right-p">In Feburary of 2016 the Cal Band was invited to perform alongside Coldplay, Bruno Mars, and Beyonce at the Super Bowl 50 halftime show. The countless hours of rehearsal were all worth the once-in-a-lifetime oppurtinity of performing for millions of viewers. You can check out the whole show <a href="https://www.youtube.com/watch?v=c9cUytejf1k"> here</a>. I show up on camera at the <a href="https://youtu.be/c9cUytejf1k?t=2m27s">2:27</a> mark.</p>
+                <p class="right-p">In Feburary of 2016, the Cal Band was invited to perform alongside Coldplay, Bruno Mars, and Beyonce at the Super Bowl 50 halftime show. The countless hours of rehearsal were all worth the once-in-a-lifetime oppurtinity of performing for millions of viewers. You can check out the whole show <a href="https://www.youtube.com/watch?v=c9cUytejf1k"> here</a>. I show up on camera at the <a href="https://youtu.be/c9cUytejf1k?t=2m27s">2:27</a> mark.</p>
             </div>
             <div class="band-entry"> 
                 <img src="resources/images/okinawa.jpg">
-                <p class="left-p">Over the Summer of 2016 the Cal Band went on a tour of Asia, stopping in China and Japan. We played at the Great Wall and an elementary school in China. In Japan we performed a joint concert with the University of Tokyo as well as playing at the Okinawa Naval Base as part of their family appreciation week. </p>
+                <p class="left-p">Over the Summer of 2016, the Cal Band went on a tour of Asia, stopping in China and Japan. We played at the Great Wall and an elementary school in China. In Japan, we performed a joint concert with the University of Tokyo as well as playing at the Okinawa Naval Base as part of their family appreciation week. </p>
             </div>
             <div class="band-entry">
-                <p class="right-p">In March of 2017 I travelled to Seatlle, Las Vegas, and Waco, Texas for the Women's PAC-12 Basketball Tournament, Men's PAC-12 Basketball Tournament, and Women's NCAA Basketball Tournament. As the Student Director for the Cal Band, I had a great time organizing the trips and conducting during the basketball games.</p>
+                <p class="right-p">In March of 2017, I travelled to Seattle, Las Vegas, and Waco, Texas for the Women's PAC-12 Basketball Tournament, Men's PAC-12 Basketball Tournament, and Women's NCAA Basketball Tournament. As the Student Director of the Cal Band, I had a great time organizing the trips and conducting during the basketball games.</p>
                 <img src="resources/images/waco.jpg">
             </div> 
             <div class="band-entry">
-                <p class="left-p">For the Fall of 2017 as part of my Student Director responsibilites, I conducted the band at all of the Cal Football games. Win or lose, it is always a pleasure to be in front of the band. </p>
+                <p class="left-p">During the Fall of 2017, as part of my Student Director responsibilites, I conducted the band at all of the Cal Football games. Win or lose, it is always a pleasure to be in front of the band and the expirience was a great way to end my final season. </p>
                 <img src="resources/images/stud_fall.jpg">
             </div> 
             
