Small Text fixes

--- a/band.html
+++ b/band.html
@@ -50,7 +50,7 @@
                 <img src="resources/images/waco.jpg">
             </div> 
             <div class="band-entry">
-                <p class="left-p">During the Fall of 2017, as part of my Student Director responsibilites, I conducted the band at all of the Cal Football games. Win or lose, it is always a pleasure to be in front of the band and the expirience was a great way to end my final season. </p>
+                <p class="left-p">During the Fall of 2017, as part of my Student Director responsibilites, I conducted the band at all of the Cal Football games. Win or lose, it is always a pleasure to be in front of the band and the experience was a great way to end my final season. </p>
                 <img src="resources/images/stud_fall.jpg">
             </div> 
             
