--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
                 </ul>
                 <ul class="sidebar-list">Contact
                     <li><a class="sidebar-link" href="resources/files/John_Echols_Resume.pdf" target="_blank">Resume</a>
-                    <li><a class="sidebar-link" href="https://www.github.com/jtechols" target="_blank">Github</a>
+                    <!-- <li><a class="sidebar-link" href="https://www.github.com/jtechols" target="_blank">Github</a> -->
                     <li><a class="sidebar-link" href="mailto:jechols@berkeley.edu" target="_blank">E-mail Me</a>
                 </ul>
                 <div id="expand">
